[tool.poetry]
name = "ocelot"
version = "0.1.0"
description = ""
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]

[tool.poetry.dependencies]
pydantic = "^1.9.1"
python = "^3.10"
starlette = "^0.20.4"
toml = "^0.10.2"
tortoise-orm = {extras = ["asyncmy"], version = "^0.19.2"}
uvicorn = { extras = ["standard"], version = "^0.18.2" }

[tool.poetry.dev-dependencies]
asgi-lifespan = "^1.0.1"
black = { version = "*", allow-prereleases = true }
Faker = "^13.15.1"
httpx = "^0.23.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.19.2"}
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
