[tool.poetry]
name = "ocelot"
version = "0.1.0"
description = ""
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]

[tool.poetry.dependencies]
faker = {version = "^20.1.0", optional = true}
pydantic = "^2.5.2"
python = "^3.11"
starlette = "^0.32.0.post1"
toml = "^0.10.2"
tortoise-orm = {extras = ["asyncmy"], version = "^0.20.0"}
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
faker = "^20.1.0"
httpx = "^0.25.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.20.0"}
types-toml = "^0.10.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
